# qskinny

./: .clang-format  .gitignore  .qmake.conf  .uncrustify  CMakeLists.txt  COPYING  LICENSES  README.md  TODO  contributing-to-QSkinny.md  qskconfig.pri  qskfunctions.pri  qskinny.pro
examples/: CMakeLists.txt  example.pri  examples.pri  examples.pro  qmlexample.pri
examples/apiDocumentationSamples/: CMakeLists.txt  main.cpp
examples/automotive/: ButtonBar.cpp  ButtonBar.h  DefaultSkin.cpp  DefaultSkin.h  MainWindow.cpp  MainWindow.h  OtherSkin.cpp  OtherSkin.h  RadioControl.h  SkinFactory.cpp  SkinFactory.h  SoundControl.cpp  SoundControl.h  Speedometer.cpp  Speedometer.h  SpeedometerDisplay.cpp  SpeedometerDisplay.h  SpeedometerSkinlet.cpp  SpeedometerSkinlet.h  automotive.pro  images.qrc  main.cpp  qvgfiles.qrc
examples/blurredbox/: BlurredBox.cpp  BlurredBox.h  BlurredBoxMaterial.cpp  BlurredBoxMaterial.h  BlurredBoxMaterialShader.cpp  BlurredBoxMaterialShader.h  BlurredBoxNode.cpp  BlurredBoxNode.h  BlurredBoxSkinlet.cpp  BlurredBoxSkinlet.h  BlurredBoxTextureProvider.cpp  BlurredBoxTextureProvider.h  MainWindow.cpp  MainWindow.h  blurredbox.pro  blurringshaders.qrc  main.cpp
examples/boxes/: Box.cpp  Box.h  CMakeLists.txt  Palette.cpp  Palette.h  boxes.pro  main.cpp
examples/buttons/: CMakeLists.txt  TestButton.qml  buttons.pro  buttons.qml  buttons.qrc  main.cpp
examples/colorswitch/: Theme.cpp  Theme.h  colorswitch.pro  colorswitch.qml  colorswitch.qrc  main.cpp
examples/desktop/: CMakeLists.txt  desktop.pro  main.cpp
examples/dialogbuttons/: Window.cpp  Window.h  dialogbuttons.pro
examples/frames/: CMakeLists.txt  Frame.cpp  Frame.h  frames.pro  frames.qml  frames.qrc  main.cpp
examples/gallery/: CMakeLists.txt  FocusIndicator.cpp  FocusIndicator.h  Page.cpp  Page.h  gallery.pro  icons.qrc  main.cpp
examples/gbenchmark/: Benchmark.cpp  Benchmark.h  gbenchmark.pro  main.cpp
examples/glabels/: CMakeLists.txt  glabels.pro  glabels.qml  glabels.qrc  main.cpp
examples/glyphbrowser/: CMakeLists.txt  FontBrowser.cpp  FontBrowser.h  GlyphBrowser.cpp  GlyphBrowser.h  GlyphListView.cpp  GlyphListView.h  GlyphTable.cpp  GlyphTable.h  GraphicProvider.cpp  GraphicProvider.h  fonts.qrc  main.cpp
examples/hmi-demo/: DefaultSkin.cpp  DefaultSkin.h  MainWindow.cpp  MainWindow.h  OtherSkin.cpp  README.images  RadioControl.cpp  RadioControl.h  SkinFactory.h  SoundControl.cpp  SoundControl.h  hmi-demo.pro  images.qrc  main.cpp
examples/images/: images.qml  images.qrc  main.cpp
examples/iot-dashboard/: Box.cpp  Box.h  BoxWithButtons.cpp  BoxWithButtons.h  Card.cpp  Card.h  CircularProgressBar.cpp  CircularProgressBar.h  DaytimeSkin.cpp  DaytimeSkin.h  Diagram.cpp  Diagram.h  DiagramSkinlet.cpp  DiagramSkinlet.h  Humidity.cpp  Humidity.h  IndoorTemperature.cpp  IndoorTemperature.h  LightIntensity.cpp  LightIntensity.h  MainContent.cpp  MainContent.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  MyDevices.cpp  MyDevices.h  NighttimeSkin.cpp  NighttimeSkin.h  PieChart.cpp  PieChart.h  PieChartPainted.cpp  PieChartPainted.h  PieChartSkinlet.cpp  PieChartSkinlet.h  QskShadowedRectangle.cpp  QskShadowedRectangle.h  QskShadowedRectangleSkinlet.cpp  QskShadowedRectangleSkinlet.h  (+15 more)
examples/iotdashboard/: Box.cpp  Box.h  BoxWithButtons.cpp  BoxWithButtons.h  CMakeLists.txt  CircularProgressBar.cpp  CircularProgressBar.h  CircularProgressBarSkinlet.cpp  CircularProgressBarSkinlet.h  DashboardPage.cpp  DashboardPage.h  DevicesPage.cpp  DevicesPage.h  Diagram.cpp  Diagram.h  DiagramSkinlet.cpp  DiagramSkinlet.h  EnergyMeter.cpp  EnergyMeter.h  GraphicProvider.cpp  GraphicProvider.h  GridBox.cpp  GridBox.h  LightDisplay.cpp  LightDisplay.h  LightDisplaySkinlet.cpp  LightDisplaySkinlet.h  LightIntensity.cpp  LightIntensity.h  MainContent.cpp  MainContent.h  MainItem.cpp  MainItem.h  MainWindow.cpp  MainWindow.h  MembersPage.cpp  MembersPage.h  MenuBar.cpp  MenuBar.h  MyDevices.cpp  (+44 more)
examples/iotdashboard_smoketest/: .gitignore  CMakeLists.txt
examples/layouts/: ButtonBox.cpp  ButtonBox.h  CMakeLists.txt  DynamicConstraintsPage.cpp  DynamicConstraintsPage.h  FlowLayoutPage.cpp  FlowLayoutPage.h  GridLayoutPage.cpp  GridLayoutPage.h  LinearLayoutPage.cpp  LinearLayoutPage.h  StackLayoutPage.cpp  StackLayoutPage.h  SwipeViewPage.cpp  SwipeViewPage.h  TestRectangle.cpp  TestRectangle.h  layouts.pro  layouts.qml  layouts.qrc  main.cpp
examples/lineedit/: lineedit.qml
examples/listbox/: CMakeLists.txt  ListBox.cpp  ListBox.h  TreeBox.cpp  TreeBox.h  listbox.pro  main.cpp
examples/messagebox/: CMakeLists.txt  main.cpp  messagebox.pro
examples/messageboxQml/: CMakeLists.txt  main.cpp  messagebox.qml  messagebox.qrc  messageboxQml.pro
inputcontext/: CMakeLists.txt  QskHunspellCompositionModel.cpp  QskHunspellCompositionModel.h  QskHunspellTextPredictor.cpp  QskHunspellTextPredictor.h  QskInputCompositionModel.cpp  QskInputCompositionModel.h  QskInputContext.cpp  QskInputContext.h  QskInputContextGlobal.h  QskInputContextPlugin.cpp  QskPinyinCompositionModel.cpp  QskPinyinCompositionModel.h  QskPinyinTextPredictor.cpp  QskPinyinTextPredictor.h  inputcontext.pro  metadata.json
playground/: CMakeLists.txt  playground.pri  playground.pro  qmlplayground.pri
qmlexport/: CMakeLists.txt  QskLayoutQml.cpp  QskLayoutQml.h  QskMainQml.cpp  QskMainQml.h  QskModule.cpp  QskModule.h  QskQml.cpp  QskQml.h  QskQml.hpp  QskQmlClassInfo.cpp  QskQmlClassInfo.h  QskQmlGlobal.h  QskQmlModule.h  QskQmlRegister.h  QskRgbValueQml.h  QskShortcut.h  QskShortcutQml.cpp  QskShortcutQml.h  qmlexport.pro
src/: CMakeLists.txt  src.pro
src/common/: QskFlags.h  (+100 more)
support/: CMakeLists.txt  DejaVuSans.qrc  FluentSystemIcons.qrc  FontAwesome.qrc  MaterialSymbols.qrc  Roboto.qrc  SegoeUI.qrc  SkinnyFont.cpp  SkinnyFont.h  SkinnyGlobal.h  SkinnyNamespace.cpp  SkinnyNamespace.h  SkinnyPlugin.cpp  SkinnyPlugin.h  SkinnyShapeFactory.cpp  SkinnyShapeFactory.h  SkinnyShapeProvider.cpp  SkinnyShapeProvider.h  SkinnyShortcut.cpp  SkinnyShortcut.h  fonts.conf.cmake.in  fonts.conf.in  fonts.qrc  support.pro
(+1606 files in other folders)
