add_subdirectory(anchors)
add_subdirectory(dials)
add_subdirectory(dialogbuttons)
add_subdirectory(gradients)
add_subdirectory(invoker)
add_subdirectory(inputpanel)
add_subdirectory(images)
add_subdirectory(shadows)
add_subdirectory(shapes)

if (QT_VERSION_MAJOR VERSION_LESS 6)
    if(TARGET Qt::WebEngine)
        add_subdirectory(webview)
    endif()
else()
    if(TARGET Qt::WebEngineCore)
        if(TARGET Qt::WebEngineQuick)
            add_subdirectory(webview)
        endif()
    endif()
endif()

if(TARGET Qt::QuickWidgets)
    add_subdirectory(grids)
endif()
