add_subdirectory(anchors)
add_subdirectory(dials)
add_subdirectory(dialogbuttons)
add_subdirectory(fonts)
add_subdirectory(gradients)
add_subdirectory(invoker)
add_subdirectory(shadows)
add_subdirectory(shapes)
add_subdirectory(charts)
add_subdirectory(plots)
add_subdirectory(models)

if (BUILD_INPUTCONTEXT)
    add_subdirectory(inputpanel)
endif()

if (BUILD_QML_EXPORT)
    add_subdirectory(images)
endif()

if (QT_VERSION_MAJOR VERSION_LESS 6)
    if(TARGET Qt::WebEngine)
        add_subdirectory(webview)
    endif()
else()
    if(TARGET Qt::WebEngineCore)
        if(TARGET Qt::WebEngineQuick)
            add_subdirectory(webview)
        endif()
    endif()
endif()

if(TARGET Qt::QuickWidgets)
    add_subdirectory(grids)
endif()

if(TARGET Qt::QuickDialogs2)
    add_subdirectory(systemdialogs)
endif()
